RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/ReportViewer/css/Toolbar.css
.fr-toolbar {
    background-color: black;
    margin: 0px;
    padding: 0px;
    width: 100%;
}
.fr-tool-container {
  width: 36px;
  height: 36px;
  border-width:0px;
  vertical-align: top;
  border-radius: 2px;
  margin:1px;
  display:inline-block;
  text-align:center;
  line-height:36px;
  color: white;
}
.fr-toolbar .fr-tool-icon {
  width:24px;
  height:24px;
  margin: 5px;
}
.fr-tool-state {
    background-color: transparent;
}
.fr-tool-state:hover {
  background-color:darkgrey;
}
.fr-tool-state:active {
  background-color:darkslategrey;
}
.fr-tool-disabled {
  opacity:.3;
}
.fr-textbox-reportpage {
  background-color: white;
  min-width:10mm;
  max-width:15mm;
  text-align:right;
  vertical-align: top;
}
.fr-textbox-keyword
{
    background-color: white;
    min-width: 10mm;
    max-width: 20mm;
}
.fr-button-find, .fr-button-findnext,fr-button-export
{
    color: white;
}

.fr-pageOf {
    width: 15px;
    color:white;
    line-height:36px;
    text-align:center;
}
.fr-num-pages {
  min-width:10mm;
  max-width:15mm;
  padding-left: 4px;
  color:white;
  line-height:36px;
}

.fr-span-sparator
{
  color:white;
  line-height:36px;
  text-align:center;
}

.fr-image-menu {
  background-image:url('../../reportviewer/Images/Toolbar/align_just_icon.png');
}

.fr-image-home {
  background-image:url('../../reportviewer/Images/Toolbar/home_icon.png');
}

.fr-image-back {
  background-image:url('../../reportviewer/Images/Toolbar/arrow_left_icon.png');
}

.fr-image-reportback {
  background-image:url('../../reportviewer/Images/Toolbar/arrow_left_icon.png');
}

.fr-image-next {
  background-image:url('../../reportviewer/Images/Toolbar/playback_next_icon.png');
}

.fr-image-prev {
  background-image:url('../../reportviewer/Images/Toolbar/playback_prev_icon.png');
}

.fr-image-firstpage {
  background-image:url('../../reportviewer/Images/Toolbar/playback_rew_icon.png');
}

.fr-image-lastpage {
  background-image:url('../../reportviewer/Images/Toolbar/playback_ff_icon.png');
}

.fr-image-refresh {
  background-image:url('../../reportviewer/Images/Toolbar/playback_reload_icon.png');
}

.fr-image-nav {
  background-image:url('../../reportviewer/Images/Toolbar/burst_icon.png');
}


.fr-image-paramarea {
  background-image:url('../../reportviewer/Images/Toolbar/list_bullets_icon.png');
}

.fr-image-documentmap
{
    background-image:url('../../reportviewer/Images/Toolbar/list_bullets_icon.png');
}

/* Smartphones (landscape) ----------- */
@media only screen and (max-height : 320px) and (min-width : 400px) and (orientation : landscape) {
.fr-button-home, .fr-button-nav, .fr-button-paramarea, .fr-button-refresh, .fr-button-firstpage, .fr-button-prev, .fr-button-next,.fr-button-fav {
  display: none;
}
.fr-button-lastpage, .fr-button-documentmap, .fr-textbox-keyword, .fr-button-find, .fr-span-find, .fr-button-findnext, .fr-span-sparator {
  display: none;
}
}  /* @media */

/* Smartphones (portrait) ----------- */
@media only screen and (max-width : 320px) and (orientation : portrait) {
.fr-button-home, .fr-button-nav, .fr-button-paramarea, .fr-button-refresh, .fr-button-firstpage, .fr-button-prev, .fr-button-next,.fr-button-fav {
  display: none;
}
.fr-button-lastpage, .fr-button-documentmap, .fr-textbox-keyword, .fr-button-find, .fr-span-find, .fr-button-findnext, .fr-span-sparator {
  display: none;
}

}  /* @media */

/* iPads (landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
.fr-button-home, .fr-button-nav, .fr-button-paramarea, .fr-button-refresh, .fr-button-firstpage, .fr-button-prev, .fr-button-next,.fr-button-fav {
  display: none;
}
.fr-button-lastpage, .fr-button-documentmap, .fr-textbox-keyword, .fr-button-find, .fr-span-find, .fr-button-findnext, .fr-span-sparator {
  display: none;
}

}  /* @media */

/* iPads (portrait) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
.fr-button-home, .fr-button-nav, .fr-button-paramarea, .fr-button-refresh, .fr-button-firstpage, .fr-button-prev, .fr-button-next,.fr-button-fav {
  display: none;
}
.fr-button-lastpage, .fr-button-documentmap, .fr-textbox-keyword, .fr-button-find, .fr-span-find, .fr-button-findnext, .fr-span-sparator {
  display: none;
}

}  /* @media */

/* Desktops and laptops ----------- */
@media only screen and (min-width : 1224px) {
/*
.fr-button-menu {
    display: none;
}
*/
}  /* @media */

/* Large screens ----------- */
@media only screen and (min-width : 1824px) {
/*/.fr-button-menu {
    display: none;
}
*/
}  /* @media */

/* iPhone 4 ----------- */
@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5)  {
.fr-button-home, .fr-button-nav, .fr-button-paramarea, .fr-button-refresh, .fr-button-firstpage, .fr-button-prev, .fr-button-next,.fr-button-fav {
  display: none;
}
.fr-button-lastpage, .fr-button-documentmap, .fr-textbox-keyword, .fr-button-find, .fr-span-find, .fr-button-findnext, .fr-span-sparator {
  display: none;
}

}  /* @media */

